@@ -199,12 +199,12 @@
     <td></td>
     <td><b>Download 
 	<a
-	   href="http://lilypond.org/download/v2.2/lilypond-2.2.0.tar.gz">tarball</a>
+	   href="http://lilypond.org/download/v2.2/lilypond-2.2.1.tar.gz">tarball</a>
 	(<a href="../devel/#warning">warning</a>)
       </b>
     </td>
     <td>
-      2.2.0
+      2.2.1
     </td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
 	team</a></td>
