@@ -12,6 +12,12 @@
     <td>
       <dl>
 
+	    
+
+      <dt>April 8, 2004</dt> <dd>A French article on the new LilyPond
+      release appeared on <a
+      href="http://linuxfr.org/2004/04/08/15968.html">linuxfr.org</a>.
+      </dd>
 	
 	<dt>April 8, 2004</dt>
 	
