@@ -26,7 +26,6 @@ Brey</a>, Principal Cellist, New York Philharmonic</em>
 </em></p>
 
 
-
 <p>
 &ldquo;I think that Lilypond is already ready for "prime time" -- I've used it
 for two years in a university music composition course, thereby saving
@@ -83,6 +82,20 @@ music is terrific!&rdquo;
 Conductor at the Theatre in Koblenz, Germany and
 distinguished GNU Hacker.</em>
 <p>
+
+<p>
+i think [LilyPond is] an incredible
+program, and it produces wonderful, wonderful output. when i read an
+interview about it last year, i was raving to several friends of mine
+about its potential
+<p>
+
+<p align=right>
+<em>Paul Davis</em>, developer of <a
+href=http://jackit.sf.net>JACK</a>
+and <a href="http://www.ardour.org">Ardour</a>.
+</em></p>
+
 
 
 <h2>Why all the praise?</h2>
